--- a/src/app/shared-component/payment-history/payment-history.component.html
+++ b/src/app/shared-component/payment-history/payment-history.component.html
@@ -1,10 +1,10 @@
 <div class="modal-header">
-<h4>Add User Fees</h4>
+<h4>Payment History</h4>
   <button type="button" class="btn-close" aria-label="Close" (click)="cancel()"></button>
 </div>
 <div class="modal-body text-center">
  <h4>Add Due Payment</h4>
-  <h5 class="mt-2 fw-light">Payment for the  <b>{{userData.name}} - {{userData.mobile}} </b> total due is  <b>₹{{userData.dueAmount}}</b></h5>
+  <h5 class="mt-2 fw-light">Payment for the </h5>
   <div class="modal-buttons mt-4">
     <button class="btn btn-primary me-2" (click)="confirm()">
      Yes
